app/src/main/jni/sdk/inc/sdkemvbase.h

typedef struct
{
    unsigned char AidLen;
    unsigned char Aid[16];		//5-16
    unsigned char Asi;			//Application Selection Indicator.0-needn't match exactly(partial match up to the length);1-match exactly
    unsigned char AppVerNum[2];
    unsigned char TacDefault[5];
    unsigned char TacOnline[5];
    unsigned char TacDecline[5];
    unsigned char FloorLimit[4];
    unsigned char Threshold[4];
    unsigned char MaxTargetPercent;
    unsigned char TargetPercent;
    unsigned char TermDDOLLen;
    unsigned char TermDDOL[128];
    unsigned char TermPinCap;
    unsigned char ectranslimit[6];		//for contact PBOC use only - low value payment - electronic cash
    unsigned char cl_cvmlimit[6];
    unsigned char cl_translimit[6];
    unsigned char cl_offlinelimit[6];

	unsigned char transvaule;		//if for all transcation type set transvaule 0xFF, otherwise set transvaule with tag9C
	unsigned char contactorcontactless;	//if contactorcontactless is 0,for both contact and contactless; if is 1,for contact only; if is 2,for contactless only
}SDK_EMVBASE_AID_STRUCT;
typedef struct
{
    unsigned char RID[5];
    unsigned char CAPKI;
    unsigned char HashInd;
    unsigned char ArithInd;
    unsigned char ModulLen;
    unsigned char Modul[248];
    unsigned char ExponentLen;
    unsigned char Exponent[3];
    unsigned char CheckSumLen;
    unsigned char CheckSum[20];
    unsigned char ExpireDate[4];
}SDK_EMVBASE_CAPK_STRUCT;
typedef enum
{
	SDKEMVBASE_CVM_NA=0,
	SDKEMVBASE_CVM_NOCVMREQ,
	SDKEMVBASE_CVM_OBTAINSIGNATURE,
	SDKEMVBASE_CVM_ONLINEPIN,
	SDKEMVBASE_CVM_CONFVERIFIED,
	SDKEMVBASE_CVM_MOBILE,
	SDKEMVBASE_CVM_PLAINTEXTPIN,
	SDKEMVBASE_CVM_ENCIPHEREDPIN,
 	SDKEMVBASE_CVM_PLAINTEXTPIN_AND_SIGN,
	SDKEMVBASE_CVM_ENCIPHEREDPIN_AND_SIGN,
	SDKEMVBASE_CVM_SKIPCVM,
}SDK_EMVBASE_CVM_RESULT;
extern s32 sdkemvbaseInitDDI(void);

extern void sdkEMVBase_SetEMVLogOutput(bool enable);
extern s32 sdkEMVBasePowerStartInit(void);
extern s32 sdkEMVBaseDelOneAID(const u8 *pheInAID, s32 siAIDLen);
extern void sdkEMVBaseDelAllAIDLists(void);
extern s32 sdkEMVBaseAddAnyAIDList(const SDK_EMVBASE_AID_STRUCT *pstInAIDList, s32 siAIDNum);
extern s32 sdkEMVBaseGetAnyAIDList(s32 siStartIndex, s32 siAIDNum, SDK_EMVBASE_AID_STRUCT *pstOutAIDList, s32 *psiOutAIDNum);
extern s32 sdkEMVBaseGetAIDListNum(s32 *psiInAIDListNum);
extern s32 sdkEMVbaseGetMatchAID(const u8 *pheInAID, s32 siAIDLen, SDK_EMVBASE_AID_STRUCT *pstOutAID,s32 MaxOutAIDNum,s32 *psiOutAIDNum);
extern s32 sdkEMVBaseDelOneCAPK(const u8 *pheInRID, s32 siCAPKIndex);
extern void sdkEMVBaseDelAllCAPKLists(void);
extern s32 sdkEMVBaseAddAnyCAPKList(const SDK_EMVBASE_CAPK_STRUCT *pstInCAPKList, s32 siCAPKNum);
extern s32 sdkEMVBaseGetAnyCAPKList(s32 siStartIndex, s32 siCAPKNum, SDK_EMVBASE_CAPK_STRUCT *pstOutCAPKList, s32 *psiOutCAPKNum);
extern s32 sdkEMVBaseGetCAPKListNum(s32 *psiInCAPKListNum);
extern s32 sdkEMVBaseGetMatchCAPK(const u8 *pheInRID, s32 uiCAPKIndex, SDK_EMVBASE_CAPK_STRUCT *pstOutCAPK);
extern s32 sdkEMVBaseDelOneGMCAPK(const u8 *pheInRID, s32 siCAPKIndex);
extern void sdkEMVBaseDelAllGMCAPKLists(void);
extern s32 sdkEMVBaseAddAnyGMCAPKList(const SDK_EMVBASE_CAPK_STRUCT *pstInCAPKList, s32 siCAPKNum);
extern s32 sdkEMVBaseGetAnyGMCAPKList(s32 siStartIndex, s32 siCAPKNum, SDK_EMVBASE_CAPK_STRUCT *pstOutCAPKList, s32 *psiOutCAPKNum);
extern s32 sdkEMVBaseGetGMCAPKListNum(s32 *psiInCAPKListNum);