app/src/main/java/com/szzt/emvtest/TestLibrary.java


    /** enum values */
    public static interface SDK_EMVBASE_CVM_RESULT {
        /** <i>native declaration : line 99</i> */
        public static final int SDKEMVBASE_CVM_NA = 0;
        /** <i>native declaration : line 100</i> */
        public static final int SDKEMVBASE_CVM_NOCVMREQ = 1;
        /** <i>native declaration : line 101</i> */
        public static final int SDKEMVBASE_CVM_OBTAINSIGNATURE = 2;
        /** <i>native declaration : line 102</i> */
        public static final int SDKEMVBASE_CVM_ONLINEPIN = 3;
        /** <i>native declaration : line 103</i> */
        public static final int SDKEMVBASE_CVM_CONFVERIFIED = 4;
        /** <i>native declaration : line 104</i> */
        public static final int SDKEMVBASE_CVM_MOBILE = 5;
        /** <i>native declaration : line 105</i> */
        public static final int SDKEMVBASE_CVM_PLAINTEXTPIN = 6;
        /** <i>native declaration : line 106</i> */
        public static final int SDKEMVBASE_CVM_ENCIPHEREDPIN = 7;
        /** <i>native declaration : line 107</i> */
        public static final int SDKEMVBASE_CVM_PLAINTEXTPIN_AND_SIGN = 8;
        /** <i>native declaration : line 108</i> */
        public static final int SDKEMVBASE_CVM_ENCIPHEREDPIN_AND_SIGN = 9;
        /** <i>native declaration : line 109</i> */
        public static final int SDKEMVBASE_CVM_SKIPCVM = 10;
    };
    /** <i>native declaration : line 146</i> */
    public interface sdkEMVBaseSetInputPINFun_fun_inputpin_callback extends Callback {
        int apply(byte ucIccEncryptWay, byte ucPINTryCount, byte [] pheCreditPwd);
    };
    /** <i>native declaration : line 153</i> */
    public interface sdkEMVBaseSetRevocationKey_fun_cmprevocation_callback extends Callback {
        int apply(Pointer key);
    };
    /**
     * Original signature : <code>int sdkemvbaseInitDDI()</code><br>
     * <i>native declaration : line 112</i>
     */
    int sdkemvbaseInitDDI();
    /**
     * Original signature : <code>void sdkEMVBase_SetEMVLogOutput(bool)</code><br>
     * <i>native declaration : line 113</i>
     */
    void sdkEMVBase_SetEMVLogOutput(byte enable);
    /**
     * Original signature : <code>int sdkEMVBasePowerStartInit()</code><br>
     * <i>native declaration : line 115</i>
     */
    int sdkEMVBasePowerStartInit();
    /**
     * Original signature : <code>int sdkEMVBaseDelOneAID(const unsigned char*, int)</code><br>
     * <i>native declaration : line 116</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseDelOneAID(byte[], int)} and {@link #sdkEMVBaseDelOneAID(com.sun.jna.Pointer, int)} instead
     */
    @Deprecated
    int sdkEMVBaseDelOneAID(Pointer pheInAID, int siAIDLen);
    /**
     * Original signature : <code>int sdkEMVBaseDelOneAID(const unsigned char*, int)</code><br>
     * <i>native declaration : line 116</i>
     */
    int sdkEMVBaseDelOneAID(byte pheInAID[], int siAIDLen);
    /**
     * Original signature : <code>void sdkEMVBaseDelAllAIDLists()</code><br>
     * <i>native declaration : line 117</i>
     */
    void sdkEMVBaseDelAllAIDLists();
    /**
     * Original signature : <code>int sdkEMVBaseAddAnyAIDList(const SDK_EMVBASE_AID_STRUCT*, int)</code><br>
     * <i>native declaration : line 118</i>
     */
    int sdkEMVBaseAddAnyAIDList(SDK_EMVBASE_AID_STRUCT pstInAIDList, int siAIDNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetAnyAIDList(int, int, SDK_EMVBASE_AID_STRUCT*, int*)</code><br>
     * <i>native declaration : line 119</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseGetAnyAIDList(int, int, test.SDK_EMVBASE_AID_STRUCT, java.nio.IntBuffer)} and {@link #sdkEMVBaseGetAnyAIDList(int, int, test.SDK_EMVBASE_AID_STRUCT, com.sun.jna.ptr.IntByReference)} instead
     */
    @Deprecated
    int sdkEMVBaseGetAnyAIDList(int siStartIndex, int siAIDNum, SDK_EMVBASE_AID_STRUCT pstOutAIDList, IntByReference psiOutAIDNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetAnyAIDList(int, int, SDK_EMVBASE_AID_STRUCT*, int*)</code><br>
     * <i>native declaration : line 119</i>
     */
    int sdkEMVBaseGetAnyAIDList(int siStartIndex, int siAIDNum, SDK_EMVBASE_AID_STRUCT pstOutAIDList, IntBuffer psiOutAIDNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetAIDListNum(int*)</code><br>
     * <i>native declaration : line 120</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseGetAIDListNum(java.nio.IntBuffer)} and {@link #sdkEMVBaseGetAIDListNum(com.sun.jna.ptr.IntByReference)} instead
     */
    @Deprecated
    int sdkEMVBaseGetAIDListNum(IntByReference psiInAIDListNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetAIDListNum(int*)</code><br>
     * <i>native declaration : line 120</i>
     */
    int sdkEMVBaseGetAIDListNum(IntBuffer psiInAIDListNum);
    /**
     * Original signature : <code>int sdkEMVbaseGetMatchAID(const unsigned char*, int, SDK_EMVBASE_AID_STRUCT*, int, int*)</code><br>
     * <i>native declaration : line 121</i><br>
     * @deprecated use the safer methods {@link #sdkEMVbaseGetMatchAID(byte[], int, test.SDK_EMVBASE_AID_STRUCT, int, java.nio.IntBuffer)} and {@link #sdkEMVbaseGetMatchAID(com.sun.jna.Pointer, int, test.SDK_EMVBASE_AID_STRUCT, int, com.sun.jna.ptr.IntByReference)} instead
     */
    @Deprecated
    int sdkEMVbaseGetMatchAID(Pointer pheInAID, int siAIDLen, SDK_EMVBASE_AID_STRUCT pstOutAID, int MaxOutAIDNum, IntByReference psiOutAIDNum);
    /**
     * Original signature : <code>int sdkEMVbaseGetMatchAID(const unsigned char*, int, SDK_EMVBASE_AID_STRUCT*, int, int*)</code><br>
     * <i>native declaration : line 121</i>
     */
    int sdkEMVbaseGetMatchAID(byte pheInAID[], int siAIDLen, SDK_EMVBASE_AID_STRUCT pstOutAID, int MaxOutAIDNum, IntBuffer psiOutAIDNum);
    /**
     * Original signature : <code>int sdkEMVBaseDelOneCAPK(const unsigned char*, int)</code><br>
     * <i>native declaration : line 123</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseDelOneCAPK(byte[], int)} and {@link #sdkEMVBaseDelOneCAPK(com.sun.jna.Pointer, int)} instead
     */
    @Deprecated
    int sdkEMVBaseDelOneCAPK(Pointer pheInRID, int siCAPKIndex);
    /**
     * Original signature : <code>int sdkEMVBaseDelOneCAPK(const unsigned char*, int)</code><br>
     * <i>native declaration : line 123</i>
     */
    int sdkEMVBaseDelOneCAPK(byte pheInRID[], int siCAPKIndex);
    /**
     * Original signature : <code>void sdkEMVBaseDelAllCAPKLists()</code><br>
     * <i>native declaration : line 124</i>
     */
    void sdkEMVBaseDelAllCAPKLists();
    /**
     * Original signature : <code>int sdkEMVBaseAddAnyCAPKList(const SDK_EMVBASE_CAPK_STRUCT*, int)</code><br>
     * <i>native declaration : line 125</i>
     */
    int sdkEMVBaseAddAnyCAPKList(SDK_EMVBASE_CAPK_STRUCT pstInCAPKList, int siCAPKNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetAnyCAPKList(int, int, SDK_EMVBASE_CAPK_STRUCT*, int*)</code><br>
     * <i>native declaration : line 126</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseGetAnyCAPKList(int, int, test.SDK_EMVBASE_CAPK_STRUCT, java.nio.IntBuffer)} and {@link #sdkEMVBaseGetAnyCAPKList(int, int, test.SDK_EMVBASE_CAPK_STRUCT, com.sun.jna.ptr.IntByReference)} instead
     */
    @Deprecated
    int sdkEMVBaseGetAnyCAPKList(int siStartIndex, int siCAPKNum, SDK_EMVBASE_CAPK_STRUCT pstOutCAPKList, IntByReference psiOutCAPKNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetAnyCAPKList(int, int, SDK_EMVBASE_CAPK_STRUCT*, int*)</code><br>
     * <i>native declaration : line 126</i>
     */
    int sdkEMVBaseGetAnyCAPKList(int siStartIndex, int siCAPKNum, SDK_EMVBASE_CAPK_STRUCT pstOutCAPKList, IntBuffer psiOutCAPKNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetCAPKListNum(int*)</code><br>
     * <i>native declaration : line 127</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseGetCAPKListNum(java.nio.IntBuffer)} and {@link #sdkEMVBaseGetCAPKListNum(com.sun.jna.ptr.IntByReference)} instead
     */
    @Deprecated
    int sdkEMVBaseGetCAPKListNum(IntByReference psiInCAPKListNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetCAPKListNum(int*)</code><br>
     * <i>native declaration : line 127</i>
     */
    int sdkEMVBaseGetCAPKListNum(IntBuffer psiInCAPKListNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetMatchCAPK(const unsigned char*, int, SDK_EMVBASE_CAPK_STRUCT*)</code><br>
     * <i>native declaration : line 128</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseGetMatchCAPK(byte[], int, test.SDK_EMVBASE_CAPK_STRUCT)} and {@link #sdkEMVBaseGetMatchCAPK(com.sun.jna.Pointer, int, test.SDK_EMVBASE_CAPK_STRUCT)} instead
     */
    @Deprecated
    int sdkEMVBaseGetMatchCAPK(Pointer pheInRID, int uiCAPKIndex, SDK_EMVBASE_CAPK_STRUCT pstOutCAPK);
    /**
     * Original signature : <code>int sdkEMVBaseGetMatchCAPK(const unsigned char*, int, SDK_EMVBASE_CAPK_STRUCT*)</code><br>
     * <i>native declaration : line 128</i>
     */
    int sdkEMVBaseGetMatchCAPK(byte pheInRID[], int uiCAPKIndex, SDK_EMVBASE_CAPK_STRUCT pstOutCAPK);
    /**
     * Original signature : <code>int sdkEMVBaseDelOneGMCAPK(const unsigned char*, int)</code><br>
     * <i>native declaration : line 130</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseDelOneGMCAPK(byte[], int)} and {@link #sdkEMVBaseDelOneGMCAPK(com.sun.jna.Pointer, int)} instead
     */
    @Deprecated
    int sdkEMVBaseDelOneGMCAPK(Pointer pheInRID, int siCAPKIndex);
    /**
     * Original signature : <code>int sdkEMVBaseDelOneGMCAPK(const unsigned char*, int)</code><br>
     * <i>native declaration : line 130</i>
     */
    int sdkEMVBaseDelOneGMCAPK(byte pheInRID[], int siCAPKIndex);
    /**
     * Original signature : <code>void sdkEMVBaseDelAllGMCAPKLists()</code><br>
     * <i>native declaration : line 131</i>
     */
    void sdkEMVBaseDelAllGMCAPKLists();
    /**
     * Original signature : <code>int sdkEMVBaseAddAnyGMCAPKList(const SDK_EMVBASE_CAPK_STRUCT*, int)</code><br>
     * <i>native declaration : line 132</i>
     */
    int sdkEMVBaseAddAnyGMCAPKList(SDK_EMVBASE_CAPK_STRUCT pstInCAPKList, int siCAPKNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetAnyGMCAPKList(int, int, SDK_EMVBASE_CAPK_STRUCT*, int*)</code><br>
     * <i>native declaration : line 133</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseGetAnyGMCAPKList(int, int, test.SDK_EMVBASE_CAPK_STRUCT, java.nio.IntBuffer)} and {@link #sdkEMVBaseGetAnyGMCAPKList(int, int, test.SDK_EMVBASE_CAPK_STRUCT, com.sun.jna.ptr.IntByReference)} instead
     */
    @Deprecated
    int sdkEMVBaseGetAnyGMCAPKList(int siStartIndex, int siCAPKNum, SDK_EMVBASE_CAPK_STRUCT pstOutCAPKList, IntByReference psiOutCAPKNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetAnyGMCAPKList(int, int, SDK_EMVBASE_CAPK_STRUCT*, int*)</code><br>
     * <i>native declaration : line 133</i>
     */
    int sdkEMVBaseGetAnyGMCAPKList(int siStartIndex, int siCAPKNum, SDK_EMVBASE_CAPK_STRUCT pstOutCAPKList, IntBuffer psiOutCAPKNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetGMCAPKListNum(int*)</code><br>
     * <i>native declaration : line 134</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseGetGMCAPKListNum(java.nio.IntBuffer)} and {@link #sdkEMVBaseGetGMCAPKListNum(com.sun.jna.ptr.IntByReference)} instead
     */
    @Deprecated
    int sdkEMVBaseGetGMCAPKListNum(IntByReference psiInCAPKListNum);
    /**
     * Original signature : <code>int sdkEMVBaseGetGMCAPKListNum(int*)</code><br>
     * <i>native declaration : line 134</i>
     */
    int sdkEMVBaseGetGMCAPKListNum(IntBuffer psiInCAPKListNum);
